fix typo in man page

--- a/share/man/man4/tcp.4
+++ b/share/man/man4/tcp.4
@@ -726,7 +726,7 @@ Send only new data segments as ECN capable transport.
 Support generalized ECN (ECN++), and send all segments of an ECN-enabled
 session as ECN capable transport.
 Also control packets to non-established and non-listening ports are
-identially marked, if outgoing sessions would request ECN.
+identically marked, if outgoing sessions would request ECN.
 .El
 .It Va pmtud_blackhole_detection
 Enable automatic path MTU blackhole detection.
